--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{Mute🤫}</title>
-<link href="./aboutPageStyle.css" rel="stylesheet" type="text/css">
-
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
-</head>
-
-<body>
-	<style>
-body {
-  background-image: url('https://cdn.discordapp.com/attachments/1245567284689240148/1246101212886208522/Untitled_2.png?ex=665b29b0&is=6659d830&hm=c0c9882ce81a365e8d73d031541736671c3fc962d1b1dffb161ba35a5f54eb25&');
-}
-</style>
-
-<header>
-
-  <!-- Identity details -->
-  <section class="profileHeader">
-    <h1>{Mute🤫}</h1>
-    <h3>UNIQUE Roblox Script Hub</h3>
-    <hr>
-    <p>{Mute🤫} Was created By: ThatsMyMute with the idea of a LEGIT cheat for both Operations Siege™ &amp; Counter Blox. This idea of legit/closet cheating isn't new.&nbsp;But as I looked online all I saw were old only Synapse Compatible Scripts and Untrustworthy script Devs with no Verifable Safety of their script(s). With Both of theses games having Vote Kick, Rage Cheating just isn't happening in those games. I wanted something that I could comfortably use myself and allow for others to use as well FREE of charge. Thats Why&nbsp; {Mute🤫} Was Created 😃&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-    <p>&nbsp;</p>
-  </section>
-  <!-- Links to Social network accounts -->
-  <aside class="socialNetworkNavBar">
-    
-  </aside>
-</header>
-<!-- content -->
-<section class="mainContent"> 
-  <!-- Contact details -->
-  <section class="section1">
-    <h2 class="sectionTitle">Developers&nbsp;</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <div class="section1Content">
-      <p><span>Discord:</span> &nbsp;ThatsMyMute0001</p>
-      <p><span>Website :</span> &nbsp;me.thatsmymute.xyz</p>
-      <p><span>Level :</span> Owner, Creator, Developer</p>
-    </div>
-  </section>
-  <!-- Previous experience details -->
-  <section class="section2">
-    <h2 class="sectionTitle">Status</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <!-- First Title & company details  -->
-    <article class="section2Content">
-    </article>
-    <!-- Second Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle"> Games Statuses & Detection Status</h2>
-      <h3 class="sectionContentSubTitle">Last Updated / May 31 - 2024</h3>
-      <p class="sectionContent"><strong> Universal | SOON TO BE ONLINE | SHOULD BE UNDETECTED ON MOST GAMES <br>
-        Counter Blox | LONGER ETA | WILL BE UNDETECTED <br>
-        Operations Siege | OLD VERSION ✅ | UNDETECTED (Made Before {Mute🤫} So Ui is Diff) </strong></p>
-    </article>
-    <!-- Replicate the above Div block to add more title and company details --> 
-  </section>
-  <!-- Links to expore your past projects and download your CV -->
-  <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="#" title="Download CV Link">Join Discord (Has Script)</a> </div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Behance Link">Send Us Your Videos!</a> </div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Github Link">GITHUB</a> </div>
-  </aside>
-</section>
-<footer>
-  <hr>
-  <p class="footerDisclaimer">2024  Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">ThatsMyMute - <span>Contact Me ThatsMyMut3@gmail.com (Serious Reasons Only)</span></p>
-</footer>
-</body>
-</html>
+gae sex
