--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>ThatsMyMute.xyz</h1>
-							<p>Why did I buy a web domain again idk</p>
+							<p>Welcome Find My Scripts Here along with contact info</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Projects</a></li>
 							</ul>
@@ -45,7 +45,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="https://cdn.discordapp.com/attachments/1245567284689240148/1247396836864430151/g1yfa5u.png?ex=665fe055&is=665e8ed5&hm=5c653ff24738bc25feaa50691273ea19725580a29e8db17dd0f9effa37c9e83a&" alt="/" data-position="center center" /></a>
+							<a href="#" class="image"><img src="https://raw.githubusercontent.com/ThatsMyMute/-Mute-/main/mutelogo.png&" alt="/" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Mute&nbsp;</h2>
