--- a/index.html
+++ b/index.html
@@ -548,10 +548,101 @@
 
 <h2 id="practice-problems">Practice Problems</h2>
 
-<!-- Include practice problems for each category with interactive features as before -->
+<h3>I. States of Matter</h3>
 
-<!-- Due to character limits, I can't include all practice problems here, but in your code, you can replicate the format used for "I. States of Matter" practice problems and add questions for each category. -->
+<div class="question">
+    <p><strong>1.</strong> Which state of matter has a definite volume but takes the shape of its container?</p>
+    <div>
+        <div class="quiz-option" data-correct="false" data-explanation="Solids have a definite shape and volume.">A) Solid</div>
+        <div class="quiz-option" data-correct="true" data-explanation="Liquids have a definite volume but take the shape of their container.">B) Liquid</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Gases have neither definite shape nor volume.">C) Gas</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Plasma behaves like gas but is ionized.">D) Plasma</div>
+    </div>
+</div>
 
+<div class="question">
+    <p><strong>2.</strong> Which state of matter is characterized by particles that are tightly packed and only vibrate in place?</p>
+    <div>
+        <div class="quiz-option" data-correct="true" data-explanation="In solids, particles are tightly packed and only vibrate in place.">A) Solid</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Liquids have particles that can move past each other.">B) Liquid</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Gases have particles that move freely and are far apart.">C) Gas</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Plasma consists of ionized particles.">D) Plasma</div>
+    </div>
+</div>
+
+<div class="question">
+    <p><strong>3.</strong> In which state are particles far apart and move freely at high speeds?</p>
+    <div>
+        <div class="quiz-option" data-correct="false" data-explanation="Particles in solids are tightly packed.">A) Solid</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Particles in liquids are close but can slide past each other.">B) Liquid</div>
+        <div class="quiz-option" data-correct="true" data-explanation="Gases have particles that are far apart and move freely.">C) Gas</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Bose-Einstein condensates occur at near absolute zero temperatures.">D) Bose-Einstein Condensate</div>
+    </div>
+</div>
+
+<!-- II. Physical and Chemical Changes Practice Problems -->
+<h3>II. Physical and Chemical Changes</h3>
+
+<div class="question">
+    <p><strong>1.</strong> Which of the following is a physical change?</p>
+    <div>
+        <div class="quiz-option" data-correct="true" data-explanation="Boiling water is a physical change as it changes state but not composition.">A) Boiling water</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Burning wood is a chemical change.">B) Burning wood</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Rusting iron is a chemical change.">C) Rusting iron</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Baking bread is a chemical change.">D) Baking bread</div>
+    </div>
+</div>
+
+<div class="question">
+    <p><strong>2.</strong> Which of the following indicates a chemical change has occurred?</p>
+    <div>
+        <div class="quiz-option" data-correct="false" data-explanation="Change in shape is a physical change.">A) Change in shape</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Change in size is a physical change.">B) Change in size</div>
+        <div class="quiz-option" data-correct="true" data-explanation="Formation of gas bubbles without heating indicates a chemical change.">C) Formation of gas bubbles without heating</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Change from solid to liquid is a physical change.">D) Change from solid to liquid</div>
+    </div>
+</div>
+
+<!-- III. Classification of Matter Practice Problems -->
+<h3>III. Classification of Matter by Composition</h3>
+
+<div class="question">
+    <p><strong>1.</strong> Which of the following is a compound?</p>
+    <div>
+        <div class="quiz-option" data-correct="false" data-explanation="Oxygen gas (O₂) is an element.">A) Oxygen gas (O₂)</div>
+        <div class="quiz-option" data-correct="true" data-explanation="Water (H₂O) is a compound made of hydrogen and oxygen.">B) Water (H₂O)</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Gold (Au) is an element.">C) Gold (Au)</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Air is a mixture.">D) Air</div>
+    </div>
+</div>
+
+<div class="question">
+    <p><strong>2.</strong> Saltwater is an example of a:</p>
+    <div>
+        <div class="quiz-option" data-correct="true" data-explanation="Saltwater is a homogeneous mixture (solution).">A) Homogeneous mixture</div>
+        <div class="quiz-option" data-correct="false" data-explanation="It's not a heterogeneous mixture.">B) Heterogeneous mixture</div>
+        <div class="quiz-option" data-correct="false" data-explanation="It's not a compound.">C) Compound</div>
+        <div class="quiz-option" data-correct="false" data-explanation="It's not a pure substance.">D) Pure substance</div>
+    </div>
+</div>
+
+<!-- Continue adding practice problems for each category in the same format -->
+
+<!-- IV. Theories of Heat Practice Problems -->
+<h3>IV. Theories of Heat</h3>
+
+<!-- V. Element Symbols Practice Problems -->
+<h3>V. Element Symbols</h3>
+
+<div class="question">
+    <p><strong>1.</strong> What is the symbol for potassium?</p>
+    <div>
+        <div class="quiz-option" data-correct="false" data-explanation="P is the symbol for phosphorus.">A) P</div>
+        <div class="quiz-option" data-correct="true" data-explanation="K is the symbol for potassium.">B) K</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Pt is the symbol for platinum.">C) Pt</div>
+        <div class="quiz-option" data-correct="false" data-explanation="Po is the symbol for polonium.">D) Po</div>
+    </div>
+</div>
 <!-- Popup for Quiz Feedback -->
 <div id="popup" class="popup">
     <h2 id="popup-text"></h2>
